# gambit

./: .clang-format  .gitignore  0Ձ  CMSSM.yaml  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  StopStau_1350_1090.slha  WC_lite.yaml  _gambit_temp_waCYzN  all_SPheno_NMSSM_decays.txt  cmake_install.cmake  daily_setup.sh  feynHiggs.patch  linkedout.cmake  optional.txt  pdg2020.yaml  setup.sh  slurm_submit.peta4-icelake  slurm_submit.peta4-icelake_full  slurm_submit.peta4-icelake_full_lcdm  slurm_submit.peta4-icelake_lcdm  spartan_multinest_hdf5.yaml  test_alpha  test_alpha.cpp  timing_stats.py
.github/: sync.yml
.github/workflows/: ci.yml  ci_Mac_arm64.yml  ci_Mac_x64.yml  ci_gambit_light.yml  ci_gambit_light_Mac_x64.yml  ci_linux.yml  ci_linux_GH.yml  cmake.yml  docs.yml  fmt.yaml  sync.yml
Backends/: Makefile  cmake_install.cmake
Backends/data/: all_SPheno_NMSSM_decays.txt
Backends/scripts/: backend_harvester.py
Backends/src/: backend_info.cpp  ini_functions.cpp
CBS_yaml/: ATLAS_0LEPStop_139invfb_SRA.yaml  ATLAS_0LEPStop_139invfb_SRB.yaml  ATLAS_0LEPStop_139invfb_SRC.yaml  ATLAS_0LEPStop_139invfb_SRD.yaml  ATLAS_EXOT_2016_017.yaml
CBS_yaml/ATLAS_0LEPStop_139invfb/: ANA-SUSY-2018-12.cxx  acc_srat0.yaml  acc_sratt.yaml  acc_sratw.yaml  acc_srbt0.yaml  acc_srbtt.yaml  acc_srbtw.yaml  acc_src1.yaml  acc_src2.yaml  acc_src3.yaml  acc_src4.yaml  acc_src5.yaml  acc_srd0.yaml  acc_srd1.yaml  acc_srd2.yaml  cutflow_srat0.yaml  cutflow_sratt.yaml  cutflow_sratw.yaml  cutflow_srb.yaml  cutflow_src.yaml  cutflow_srd0.yaml  cutflow_srd1.yaml  cutflow_srd2.yaml  eff_srat0.yaml  eff_sratt.yaml  eff_sratw.yaml  eff_srbt0.yaml  eff_srbtt.yaml  eff_srbtw.yaml  eff_src1.yaml  eff_src2.yaml  eff_src3.yaml  eff_src4.yaml  eff_src5.yaml  eff_srd0.yaml  eff_srd1.yaml  eff_srd2.yaml  lq3u_exp.yaml  lq3u_exp_down.yaml  lq3u_exp_up.yaml  (+21 more)
CBS_yaml/ATLAS_0lep_139invfb/: ATLAS_0lep_139invfb_solo_Verif.yaml  ATLAS_0lep_139invfb_table_16_gen_events.yaml  ATLAS_0lep_139invfb_table_17_gen_events.yaml  ATLAS_0lep_139invfb_table_18_gen_events.yaml
CBS_yaml/ATLAS_0lep_36invfb/: ATLAS_0lep_36invfb_table_5_gen_events.yaml  ATLAS_0lep_36invfb_table_6_gen_events.yaml  ATLAS_0lep_36invfb_table_7_gen_events.yaml
ColliderBit/: CMakeLists.txt
ColliderBit/data/: example_flipflop.slha
ColliderBit/examples/: ColliderBit_SLHA_Validation_CMS_13TeV_1LEPbb_137invfb.yaml  ColliderBit_SLHA_file_model.yaml  ColliderBit_SLHA_scan_model.yaml  functors_for_CBS.cpp  solo.cpp  solo_example.yaml
ColliderBit/scripts/: collider_harvester.py
ColliderBit/src/: BDT.cpp  ColliderBit_Higgs.cpp  ColliderBit_InterpolatedYields.cpp  ColliderBit_SModelS.cpp  ColliderBit_eventloop.cpp  ColliderBit_measurements.cpp  LHC_likelihoods.cpp  MCLoopInfo.cpp  MVA.cpp  PoissonCalculators.cpp  Utils.cpp  getxsec.cpp  smearEvent.cpp  (+3 more)
Core/: CMakeLists.txt  Makefile  cmake_install.cmake
DecayBit/: Makefile  cmake_install.cmake
Elements/: CMakeLists.txt  Makefile  cmake_install.cmake
FlavBit/: Makefile  cmake_install.cmake
Logs/: CMakeLists.txt  Makefile  cmake_install.cmake
Models/: Makefile  cmake_install.cmake
Printers/: Makefile  cmake_install.cmake
ScannerBit/: Makefile  cmake_install.cmake
ScannerBit/emu_egg/: CMakeLists.txt
ScannerBit/emu_egg/include/: egg.hpp
ScannerBit/emu_egg/mpi_test/: gambit_dummy.cpp  master.cpp  parent.cpp  parent_feed_def.cpp  worker.cpp
ScannerBit/emu_egg/src/: egg.cpp
SpecBit/: Makefile  cmake_install.cmake  initial_THDM_spectrum->slha
SpecBit_redesign_notes_old_tests/: LesHouches.out.CMSSM.test_2L_RGEs.mod
Spectrum_Testing/: CMSSM_test_FS_example.yaml  LesHouches.out.CMSSM.test_2L_RGEs  Test_SLHA_files.cpp  Test_SLHA_files.hpp  compare.sh
Utils/: CMakeLists.txt  Makefile  cmake_install.cmake
build_scripts_thdm/: buildDebug.sh  buildRelease.sh  clearResults.sh  combineResults.sh  plotRules.pip  runPippi.sh  runScanNoMPI.sh
cmake/: MacOSX.cmake  backends.cmake  cleaning.cmake  cmake_variables.hpp.in  contrib.cmake  datasets.cmake  executables.cmake  externals.cmake  gambit.cmake  optional.cmake  preprocessor.cmake  python_scanners.cmake  scan-test.cmake  scanners.cmake  standalones.cmake  toy_backends.cmake  utilities.cmake  warnings.cmake
config/: backend_locations.yaml.default  bibtex_entries.bib  gambit_bits.yaml  particle_database.yaml  scanner_locations.yaml.default
contrib/pyscannerbit/: CMakeLists.txt  setup.py  test.py
contrib/pyscannerbit/src/: pyScannerBit.cpp
gum/: CMakeLists.txt  gum.py  gum_nomathematica  gum_nomathematica.py
pippi/: pippi  pippi_read.py  pippi_script.py
pippi-modified/: notes.py  pippi.py  pippi_colours.py  pippi_merge.py  pippi_parse.py  pippi_plot.py  pippi_read.py  pippi_script.py  pippi_utils.py
plotting_files/: README
scripts/: buildDebug.sh  buildRelease.sh  clearResults.sh  combineResults.sh  data.txt  plotRules.pip  runPippi.sh  runScan.sh  runScanNoMPI.sh
stdout/: out.1.01  out.1.02  out.1.03  out.1.05  out.1.06  out.1.07  out.1.08  out.1.10  out.1.11  out.1.12  out.1.13  out.1.15  out.1.17  out.1.19  out.1.21  out.1.23  out.1.24  out.1.25  out.1.29
yaml_files/: ATLAS_13TeV_EXOT_TT_WbWb_36invfb.yaml  ATLAS_EXOT_2016_014.yaml  AnnualModulation.yaml  B2sgamma.yaml  Bs2mumu.yaml  CMSSM.yaml  CMSSM_test.yaml  CPVYukawas.yaml  CPVYukawas_s.yaml  CPVYukawas_uds.yaml  CPVYukawas_udsDS.yaml  ColliderBit_CMSSM.yaml  ColliderBit_Contur_test_gridtest.yaml  ColliderBit_SLHA.yaml  ColliderBit_flipflop.yaml  ColliderBit_solo.yaml  CosmoALP_polychord.yaml  CosmoALP_polychord_full.yaml  CosmoALP_polychord_full_lcdm.yaml  CosmoALP_polychord_lcdm.yaml  CosmoBit_quickStart.yaml  CosmoBit_yield_test_annihilation.yaml  CosmoBit_yield_test_decay.yaml  Cutflow_test.yaml  DAMA_TEST.yaml  DAMA_TEST_BF.yaml  DMEFT_3flavour_DAMA.yaml  DMEFT_3flavour_TEST_BF.yaml  DMEFT_dirdet_DAMA.yaml  DMEFT_dirdet_DAMA_BF.yaml  DMsimp.yaml  DarkBit_MSSM7_DAMA.yaml  DarkBit_ScalarSingletDM_Z2.yaml  DiracSingletDM_Z2.yaml  FlavBit_CMSSM.yaml  GTHDM_B2Ktautau_test.yaml  GTHDM_Bsmumu_test.yaml  GTHDM_DeltaMs_test.yaml  GTHDM_prueba.yaml  GTHDM_test.yaml  (+126 more)
(+2815 files in other folders)
